SERVER-26280 change ErrorCode expectation in MigrationManager